--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
    "keywords": [
       "telegram",
       "anime",
-      "Scenario",
+      "Jarvis",
       "Powerful",
       "group",
       "manager"
