--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,43 @@
-alphabet-detector==0.0.7
+alphabet-detector==1.0.0
 bleach==4.1.0
-cachetools==4.2.2
-CurrencyConverter
+cachetools==5.0.0
+CurrencyConverter==0.18
 emoji==1.6.1
 feedparser==6.0.8
 pyrate-limiter==2.4.7
-lxml==4.6.4
+lxml==4.7.1
 nltk==3.6.5
-pillow>=4.2.0
+pillow>=8.4.0
 pretty-errors==1.2.24
-psutil==5.8.0
+psutil==5.9.0
 pynewtonmath==1.0.1
-python-telegram-bot==13.11
+python-telegram-bot==14.1
 regex==2021.11.2
-requests==2.26.0
+requests==2.27.1
 spamwatch==0.3.0
 speedtest-cli==2.1.3
 spongemock==0.3.4
-sqlalchemy==1.4.26
-telethon==1.23.0
+sqlalchemy==1.4.31
+telethon==1.24.0
 ujson>=5.4.0
 wikipedia==1.4.0
 zalgo-text==0.6
-fontTools==4.27.1
+fontTools==4.28.5
 nekos.py==1.0.3
 telegraph==2.0.1
-tgcrypto==1.2.2
+tgcrypto==1.4.1
 youtube_search==2.1.0
 pytube==11.0.1
-pymongo==3.12.1
-motor>=2.1.0,<2.6.0
-dnspython==2.1.0
-redis==3.5.3
-gtts==2.2.3
-cloudscraper==1.2.58
+pymongo==3.13.0
+motor>=2.5.0,<2.6.0
+dnspython==2.2.0
+redis==4.0.3
+gtts==2.3.2
+cloudscraper==1.3.0
 wget==3.2
 tswift==0.7.0
 lyricsgenius==3.0.1
-envparse==0.2.0
+envparse==1.0.0
 cryptg==0.2.post4
 aioredis==2.0.0
 odmantic==0.3.5
@@ -45,23 +45,23 @@ pykeyboard==0.1.2
 aiofiles==0.7.0
 hachoir==3.1.2
 bing_image_downloader==1.1.1
-pytz==2021.3
+pytz==2022.1
 html2text==2020.1.16
-NumPy==1.22
-opencv-python-headless==4.5.4.58
+numpy==1.22.1
+opencv-python-headless==4.5.4.60
 uvloop==0.16.0
 python-dotenv==0.19.1
 gpytranslate==1.3.0
 glitch_this==1.0.2
-countryinfo==0.1.2
+countryinfo==0.1.6
 faker==9.7.1
 PyDictionary==2.0.1
-ffmpeg==1.4
+ffmpeg==1.5
 python-rapidjson==1.5
 markdown2>=2.4.0
 cowpy==1.1.1
-selenium==4.0.0
-hiredis==2.0.0
+selenium==4.1.0
+hiredis==2.1.0
 pendulum==2.1.2
 img2pdf==0.4.3
 google-api-python-client==2.29.0
@@ -72,26 +72,24 @@ pydub==0.25.1
 nudepy==0.5.1
 textblob==0.17.1
 requests_html==0.10.0
-bs4==0.0.1
+beautifulsoup4==4.10.0
 multicolorcaptcha==1.1.3
 launchpadlib==1.10.15.1
-google-trans-new==1.1.9
+googletrans==4.0.0-rc1
 jikanpy==4.3.2
 futures==3.1.1
-future
-psycopg2-binary
-geopy
-humanize
-heroku3
-beautifulsoup4
+future==0.18.2
+psycopg2-binary==2.9.1
+geopy==2.2.0
+humanize==3.12.0
+heroku3==2.1.0
 pyrogram==1.4.16
-yt-dlp
-python-arq
-aiohttp
-carbonnow
-search_engine_parser
-googletrans
-youtube_search_python
-httpx
-gitpython
-loguru
+yt-dlp==2022.01.03
+python-arq==0.3.0
+aiohttp==3.8.1
+carbonnow==0.2.2
+search-engine-parser==0.6.2
+youtube-search-python==1.4.8
+httpx==0.21.0
+gitpython==3.2.5
+loguru==0.6.0
